--- a/CSS-basics/tag-specific-properties/index.html
+++ b/CSS-basics/tag-specific-properties/index.html
@@ -17,7 +17,14 @@
 <body>
 
     <div class="container">
-        <h1 class="title">Tag Specific Properties</h1>
+        <h1 class="title">Media Elements</h1>
+        <section>
+            <h2>object-fit</h2>
+            <ul>
+                <li>Defines the height and width of media elements with respect to its parent's</li>
+            </ul>
+        </section>
+
         
     </div>
 
