--- a/CSS-basics/tag-specific-properties/index.html
+++ b/CSS-basics/tag-specific-properties/index.html
@@ -21,7 +21,7 @@
         <section>
             <h2>object-fit</h2>
             <ul>
-                <li>Defines the height and width of media elements with respect to its parent's</li>
+                <li>Defines the height and width of a media element with respect to its parent's.</li>
             </ul>
         </section>
 
