--- a/CSS-basics/tag-specific-properties/index.html
+++ b/CSS-basics/tag-specific-properties/index.html
@@ -22,7 +22,33 @@
             <h2>object-fit</h2>
             <ul>
                 <li>Defines the height and width of a media element with respect to its parent's.</li>
+                <li>Works with images, videos and other media formats.</li>
+                <br>
+                <li><code>object-fit: fill | contain | cover | scale-down | none;</code></li>
             </ul>
+        </section>
+        <section>
+            <h2>object-position</h2>
+        </section>
+
+        <h1 class="title">Anchor</h1>
+        <section>
+            <h2>text-decoration</h2>
+        </section>
+
+        <h1 class="title">Lists</h1>
+        <section>
+            <h2>list-style</h2>
+            <h2>list-style-type</h2>
+            <h2>llist-style-image</h2>
+            <h2>list-style-position</h2>
+        </section>
+
+        <h1 class="title">tables</h1>
+        <section>
+            <h2>border</h2>
+            <h2>border-collapse</h2>
+            <h2>Alignment</h2>
         </section>
 
         
