--- a/index.html
+++ b/index.html
@@ -21,7 +21,10 @@
         <h2></h2>
 
         <h1 class="title">CSS Basics</h1>
-        <h2><a href="./CSS-basics/tag-specific-properties">Tag Spesific properties</a></h2>
+        <ol>
+            <li><a href="./CSS-basics/syntax/">Syntax</a></li>
+            <li><a href="./CSS-basics/tag-specific-properties">Tag Spesific properties</a></li>
+        </ol>
 
 
         
