--- a/index.html
+++ b/index.html
@@ -17,17 +17,32 @@
 <body>
 
     <div class="container">
-        <h1 class="title">HTML Basics</h1>
-        <h2></h2>
+            <h1 class="title">HTML Basics</h1>
+        <section>
+            <ul>
+                <li><a href="./HTML-basics/syntax/">Syntax</a></li>
+                <li><a href="./HTML-basics/text-formatting/">Text Formatting, White Spacing and Entities</a></li>
+                <li><a href="./HTML-basics/media-tables/">Tag Type, Media, Tables</a></li>
+                <li><a href="./HTML-basics/forms-1/">Forms 1</a></li>
+                <li><a href="./HTML-basics/forms-2/">Forms 2</a></li>
+                <li><a href="./HTML-basics/project-fine-dine/">Projet: Fine Dine</a></li>
+            </ul>
+        </section>
+
 
         <h1 class="title">CSS Basics</h1>
-        <ol>
-            <li><a href="./CSS-basics/syntax/">Syntax</a></li>
-            <li><a href="./CSS-basics/tag-specific-properties">Tag Spesific properties</a></li>
-        </ol>
+        <section>
+            <ul>
+                <li><a href="./CSS-basics/syntax/">Syntax</a></li>
+                <li><a href="./CSS-basics/tag-specific-properties">Tag Spesific properties</a></li>
+            </ul>
+        </section>
 
 
-        
+
+
+
+
     </div>
 
     <script src="./app.js"></script>
