--- a/CSS-basics/syntax/index.html
+++ b/CSS-basics/syntax/index.html
@@ -154,7 +154,7 @@
             <p>If no inline or internal style found, external CSS style is applied. </p>
         </section>
 
-        <h1 class="title">Order &nbsp; Counts</h1>
+        <h1 class="title">Order &nbsp; Counts !</h1>
         <section>
             <h2>Order of Rules</h2>
             <ul><li> The latter CSS rules override the previous ones.</li></ul>
@@ -166,7 +166,7 @@
             <div class="text-box" id="main-p">
                     Praragraphs color changed
             </div>
-            <p>*If order of rules is reversed, paragraphs would appear blue.  </p>
+            <p>*If order of rules is reversed, paragraphs appear blue.  </p>
             <div id="p" class="text-box">
                     color not changed
                 </div>
