--- a/index.html
+++ b/index.html
@@ -34,7 +34,15 @@
         <section>
             <ul>
                 <li><a href="./CSS-basics/syntax/">Syntax</a></li>
+                <li><a href="./CSS-basics/colors/">Colors</a></li>
+                <li><a href="./CSS-basics/box-model/">Box Model</a></li>
+                <li><a href="./CSS-basics/typography/">Typography</a></li>
+                <li><a href="./CSS-basics/units/">Units</a></li>
+                <li><a href="./CSS-basics/height-width/">Width and Height</a></li>
                 <li><a href="./CSS-basics/tag-specific-properties">Tag Spesific properties</a></li>
+                
+                <li><a href="./CSS-basics/"></a></li>
+
             </ul>
         </section>
 
