--- a/CSS-basics/typography/index.html
+++ b/CSS-basics/typography/index.html
@@ -225,6 +225,16 @@
 
             </ul>
         </section>
+        <section>
+                <h2>First Line</h2>
+                <ul>
+                    <li>Special type of selectors. Allows to style only the first line of the text.</li>
+                    <br>
+                    <li><code>selector::first-line{ set of declerations}</code></li><br>
+                    <div id="first-line" class="text-box">The first line is blue and larger </div>
+    
+                </ul>
+            </section>
 
             <h1 class="title">White Spacing</h1>
         <section>
