--- a/CSS-basics/tag-specific-properties/index.html
+++ b/CSS-basics/tag-specific-properties/index.html
@@ -79,19 +79,43 @@
                 <li>second list item</li>
                 <li>third list item</li>
             </ul>
-        
-            <div id="list-type">
-
-            </div>
+ 
             <h2>llist-style-image</h2>
+            <ul>
+                <li><code>list-style-image: url();</code></li>
+                <li>Allow to have lists with custom bullet image.</li>
+            </ul>
+            <ul id="list-img">
+                    <li>first list item</li>
+                    <li>second list item</li>
+                    <li>third list item</li>
+                </ul>
             <h2>list-style-position</h2>
-            <h4 class="title left">Shorthand</h4>
-            <h2>list-style</h2>
+            <ul><li><code>list-style-position: outside(default) | inside;</code></li></ul>
+
+            <ul id="list-pos" > 
+                    <li>first list item</li>
+                    <li>second list item</li>
+                    <li>third list item</li>
+            </ul>
+            
+        </section>
+        <section>
+                <h4 class="title left">Shorthand</h4>
+                <h2>list-style</h2>
+                <ul><li><code>list-style: list-style-type list-style-position list-style-image</code></li></ul>
         </section>
 
         <h1 class="title">tables</h1>
         <section>
+            <p>The <code>&lt;table&gt;</code> attribute border is deprecated.</p>
             <h2>border</h2>
+                <ul><li>assign <code>border</code> property to  <code>&lt;table&gt;</code> <code>&lt;th&gt;</code> and <code>&lt;td&gt;</code> element.</li></ul>
+                <table id="table">
+                    <tr><th></td>name</th><th>age</th></tr>
+                    <tr><th></td>Jake</th><th>29</th></tr>
+                    <tr><th></td>Amy</th><th>30</th></tr>
+                </table>
             <h2>border-collapse</h2>
             <h2>Alignment</h2>
         </section>
