--- a/CSS-basics/tag-specific-properties/index.html
+++ b/CSS-basics/tag-specific-properties/index.html
@@ -116,8 +116,23 @@
                     <tr><th></td>Jake</th><th>29</th></tr>
                     <tr><th></td>Amy</th><th>30</th></tr>
                 </table>
-            <h2>border-collapse</h2>
-            <h2>Alignment</h2>
+                <ul><li>Table now has double borders, since both  <code>&lt;th&gt; &lt;td&gt;</code> and <code>&lt;table&gt;</code> have borders.</li></ul>
+            
+                <h2>border-spacing</h2>
+                <ul><li><code>border-spacing: [number][unit];</code></li></ul>
+                <table id="border-spacing">
+                        <tr><th></td>name</th><th>age</th></tr>
+                        <tr><th></td>Jake</th><th>29</th></tr>
+                        <tr><th></td>Amy</th><th>30</th></tr>
+                    </table>
+                <h2>border-collapse</h2>
+                <ul><li><code>border-collapse: separate | collapse;</code></li></ul>
+                <table id="border-collapse">
+                        <tr><th></td>name</th><th>age</th></tr>
+                        <tr><th></td>Jake</th><th>29</th></tr>
+                        <tr><th></td>Amy</th><th>30</th></tr>
+                    </table>
+
         </section>
 
 
