--- a/index.html
+++ b/index.html
@@ -40,6 +40,13 @@
                 <li><a href="./CSS-basics/units/">Units</a></li>
                 <li><a href="./CSS-basics/height-width/">Width and Height</a></li>
                 <li><a href="./CSS-basics/tag-specific-properties">Tag Spesific properties</a></li>
+                <li>Background</li>
+                <li>Display</li>
+                <li>Hiding Elements</li>
+                <li>Overflow and Stacking</li>
+                <li><a href="./CSS-basics/float/">Floating Elements</a></li>
+                <li>Position</li>
+
                 
                 <li><a href="./CSS-basics/"></a></li>
 
