--- a/CSS-basics/float/index.html
+++ b/CSS-basics/float/index.html
@@ -99,7 +99,7 @@
 
             <div class="text-box">
                 <main class="collapsing-parent">
-                    Parent collapses to fit text only
+                    Parent collapses to fit the text only
                     <div class="float-right">floating child</div>
 
                 </main>
@@ -114,7 +114,7 @@
 
             <div class="text-box">
                 <main class="collapsing-parent clearfix">
-                    Parent collapses to fit text only
+                    Parent collapses to fit the text only
                     <div class="float-right">floating child</div>
 
                 </main>
@@ -128,7 +128,7 @@
 
             <div class="text-box">
                 <main class="collapsing-parent">
-                    Parent collapses to fit text only
+                    Parent collapses to fit the text only
                     <div class="float-right">floating child</div>
 
                 </main>
@@ -146,7 +146,7 @@
             </ul>
             <div class="text-box">
                 <main class="collapsing-parent">
-                    Parent collapses to fit text only
+                    Parent collapses to fit the text only
                     <div class="float-right">floating child</div>
 
                 </main>
@@ -162,7 +162,7 @@
             </ul>
             <div class="text-box">
                 <main class="collapsing-parent clearfix">
-                    Parent collapses to fit text only
+                    Parent collapses to fit the text only
                     <div class="float-right">floating child</div>
 
                 </main>
