--- a/index.html
+++ b/index.html
@@ -46,10 +46,9 @@
                 <li>Overflow and Stacking</li>
                 <li><a href="./CSS-basics/float/">Floating Elements</a></li>
                 <li>Position</li>
-                <li><a href="./CSS-basics/"></a></li>
-
-                
-                <li><a href="./CSS-basics/"></a></li>
+                <li><a href="./CSS-basics/projects/aton-art-gallery/">PROJECT: Aton Art Gallery</a></li>
+                <li><a href="./CSS-basics/projects/travel-blog/">PROJECT: Ella's Travelling Blog</a></li>
+                <li><a href="./CSS-basics/projects/icamp/">PROJECT: Coding School Website</a></li>
 
             </ul>
         </section>
