--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <li><a href="./HTML-basics/media-tables/">Tag Type, Media, Tables</a></li>
                 <li><a href="./HTML-basics/forms-1/">Forms 1</a></li>
                 <li><a href="./HTML-basics/forms-2/">Forms 2</a></li>
-                <li><a href="./HTML-basics/project-fine-dine/">Projet: Fine Dine</a></li>
+                <li><a href="./HTML-basics/project-fine-dine/">PROJECT-1: Fine Dine</a></li>
             </ul>
         </section>
 
@@ -46,10 +46,81 @@
                 <li>Overflow and Stacking</li>
                 <li><a href="./CSS-basics/float/">Floating Elements</a></li>
                 <li>Position</li>
-                <li><a href="./CSS-basics/projects/aton-art-gallery/">PROJECT: Aton Art Gallery</a></li>
-                <li><a href="./CSS-basics/projects/travel-blog/">PROJECT: Ella's Travelling Blog</a></li>
-                <li><a href="./CSS-basics/projects/icamp/">PROJECT: Coding School Website</a></li>
+                <li><a href="./CSS-basics/projects/aton-art-gallery/">PROJECT-1: Aton Art Gallery</a></li>
+                <li><a href="./CSS-basics/projects/travel-blog/">PROJECT-2: Ella's Travelling Blog</a></li>
+                <li><a href="./CSS-basics/projects/icamp/">PROJECT-3: Coding School Website</a></li>
 
+            </ul>
+        </section>
+
+        <h1 class="title">Layouts and Semantic HTML</h1>
+        <section>
+            <ul>
+                <li>HTML Semantic Tags</li>
+                <li>Basic layouts and Best Practices</li>
+                <li>Tools for Structuring Layouts</li>
+                <li>Flex</li>
+                <li>Grid</li>
+                <li>PROJECT-1:</li>
+                <li>PROJECT-2:</li>
+            </ul>
+        </section>
+
+        <h1 class="title">Responsive / Adaptive Layouts</h1>
+        <section>
+            <ul>
+                <li>Media Queries</li>
+                <li>Responsive Layout</li>
+                <li>Adaptive Layout</li>
+                <li>Mobile First Approach</li>
+                <li>PROJECT-1:</li>
+                <li>PROJECT-2:</li>
+            </ul>
+        </section>
+        <h1 class="title">Advanced CSS</h1>
+        <section>
+            <ul>
+                <li>CSS Rules and Variables</li>
+                <li>CSS Functions</li>
+                <li>Transform</li>
+                <li>Filters</li>
+                <li>Blend Modes</li>
+                <li>PROJECT-1: Panda Illustration</li>
+            </ul>
+        </section>
+        
+        <h1 class="title">Animation</h1>
+        <section>
+            <ul>
+                <li>Transition</li>
+                <li>Keyframes</li>
+                <li>Microinteractions</li>
+                <li>PROJECT-1: Burger animation</li>
+            </ul>
+        </section>
+        <h1 class="title">UI Components</h1>
+        <section>
+            <ul>
+                <li>Sticky Navigation Bar</li>
+                <li>Responsive Navigation Bar</li>
+                <li>Cards</li>
+                <li>Panels</li>
+                <li>Sidebar/ slideshow</li>
+                <li>Dropdown Menu</li>
+                <li>Tooltip</li>
+                <li>Progress Bar</li>
+                <li>Search with Autocomplete</li>
+                <li>Modal</li>
+                <li>Tabs</li>
+                <li>Pagination</li>
+                <li>Parallax</li>
+            </ul>
+        </section>
+        <h1 class="title">HTML Graphics</h1>
+        <section>
+            <ul>
+                <li>SVG</li>
+                <li>Canvas</li>
             </ul>
         </section>
 
