--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                 <li>Transform</li>
                 <li>Filters</li>
                 <li>Blend Modes</li>
-                <li>PROJECT-1: Panda Illustration</li>
+                <li><a href="./Advanced-CSS/projects/panda/">PROJECT-1: Panda Illustration</a></li>
             </ul>
         </section>
         
@@ -95,7 +95,7 @@
                 <li>Transition</li>
                 <li>Keyframes</li>
                 <li>Microinteractions</li>
-                <li>PROJECT-1: Burger animation</li>
+                <li><a href="./animation/projects/burger-animation/">PROJECT-1: Burger Animation</a></li>
             </ul>
         </section>
         <h1 class="title">UI Components</h1>
