--- a/index.html
+++ b/index.html
@@ -105,8 +105,11 @@
                 <li>Responsive Navigation Bar</li>
                 <li>Cards</li>
                 <li>Panels</li>
-                <li>Sidebar/ slideshow</li>
+                <li>Sidebar</li>
+                <li>slideshow</li>
                 <li>Dropdown Menu</li>
+                <li>Mega menu </li>
+                <li>accordion menu</li>
                 <li>Tooltip</li>
                 <li>Progress Bar</li>
                 <li>Search with Autocomplete</li>
@@ -114,6 +117,8 @@
                 <li>Tabs</li>
                 <li>Pagination</li>
                 <li>Parallax</li>
+                <li>PROJECT-1</li>
+                <li>PROJECT-2</li>
             </ul>
         </section>
         <h1 class="title">HTML Graphics</h1>
