--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 <li><a href="./CSS-basics/height-width/">Width and Height</a></li>
                 <li><a href="./CSS-basics/tag-specific-properties">Tag Spesific properties</a></li>
                 <li><a href="./CSS-basics/background/">Background</a></li>
-                <li>Display</li>
+                <li><a href="./CSS-basics/display/">Display</a></li>
                 <li>Hiding Elements</li>
                 <li>Overflow and Stacking</li>
                 <li><a href="./CSS-basics/float/">Floating Elements</a></li>
