--- a/index.html
+++ b/index.html
@@ -42,10 +42,11 @@
                 <li><a href="./CSS-basics/tag-specific-properties">Tag Spesific properties</a></li>
                 <li><a href="./CSS-basics/background/">Background</a></li>
                 <li><a href="./CSS-basics/display/">Display</a></li>
-                <li>Hiding Elements</li>
-                <li>Overflow and Stacking</li>
+                <li><a href="./CSS-basics/hiding/">Hiding Elements</a></li>
+                <li><a href="./CSS-basics/overflow/">Overflow</a></li>
+                <li><a href="./CSS-basics/stacking/">Stacking</a></li>
                 <li><a href="./CSS-basics/float/">Floating Elements</a></li>
-                <li>Position</li>
+                <li><a href="./CSS-basics/position/">Position</a></li>
                 <li><a href="./CSS-basics/projects/aton-art-gallery/">PROJECT-1: Aton Art Gallery</a></li>
                 <li><a href="./CSS-basics/projects/travel-blog/">PROJECT-2: Ella's Travelling Blog</a></li>
                 <li><a href="./CSS-basics/projects/icamp/">PROJECT-3: Coding School Website</a></li>
