--- a/CSS-basics/stacking/index.html
+++ b/CSS-basics/stacking/index.html
@@ -18,6 +18,9 @@
 
 <div class="container">
     <h1 class="title">Stacking</h1>
+    <section>
+        
+    </section>
 </div>
 
     <script src="./app.js"></script>
