--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         <h1 class="title">Layouts and Semantic HTML</h1>
         <section>
             <ul>
-                <li>HTML Semantic Tags</li>
+                <li><a href="./layouts/semantic-tags/">HTML Semantic Tags</a></li>
                 <li>Basic layouts and Best Practices</li>
                 <li>Tools for Structuring Layouts</li>
                 <li>Flex</li>
