--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         <section>
             <ul>
                 <li><a href="./layouts/semantic-tags/">HTML Semantic Tags</a></li>
-                <li>Basic layouts and Best Practices</li>
+                <li><a href="./layouts/convenstions/">Layout Conventions and Best Practices</a></li>
                 <li>Tools for Structuring Layouts</li>
                 <li>Flex</li>
                 <li>Grid</li>
