--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             <ul>
                 <li><a href="./layouts/semantic-tags/">HTML Semantic Tags</a></li>
                 <li><a href="./layouts/convenstions/">Layout Conventions and Best Practices</a></li>
-                <li>Tools for Structuring Layouts</li>
+                <li><a href="./layouts/layout-tools/">Tools for Structuring Layouts</a></li>
                 <li>Flex</li>
                 <li>Grid</li>
                 <li>PROJECT-1:</li>
