--- a/index.html
+++ b/index.html
@@ -44,7 +44,8 @@
                 <li><a href="./CSS-basics/background/">Background</a></li>
                 <li><a href="./CSS-basics/display/">Display</a></li>
                 <li><a href="./CSS-basics/hiding/">Hiding Elements</a></li>
-                
+                <li><a href="./CSS-basics/float/">Floating Elements</a></li>
+                <li><a href="./CSS-basics/float/">Floating Elements</a></li>
                 <li><a href="./CSS-basics/overflow/">Overflow</a></li>
                 <li><a href="./CSS-basics/position/">Position</a></li>
                 <li><a href="./CSS-basics/stacking/">Stacking Layers</a></li>
@@ -60,10 +61,9 @@
                 <li><a href="./layouts/semantic-tags/">HTML Semantic Tags</a></li>
                 <li><a href="./layouts/convenstions/">Layout Conventions and Best Practices</a></li>
                 <li><a href="./layouts/layout-tools/">Tools for Structuring Layouts</a></li>
-                <li><a href="./CSS-basics/float/">Floating Elements</a></li>
                 <li><a href="./CSS-basics/projects/travel-blog/">PROJECT-1: Ella's Travelling Blog</a></li>
                 <li><a href="./CSS-basics/projects/icamp/">PROJECT-2: Coding School Website</a></li>
-                <li>Flex</li>
+                <li><a href="./layouts/Flex/">Flex</a></li>
                 <li>Grid</li>
                 <li>PROJECT-3:</li>
                 <li>PROJECT-4:</li>
