--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
                 <li><a href="./layouts/layout-tools/">Tools for Structuring Layouts</a></li>
                 <li><a href="./CSS-basics/projects/travel-blog/">PROJECT-1: Ella's Travelling Blog</a></li>
                 <li><a href="./CSS-basics/projects/icamp/">PROJECT-2: Coding School Website</a></li>
-                <li><a href="./layouts/Flex/">Flex</a></li>
-                <li>Grid</li>
+                <li><a href="./layouts/flex/">Flex</a></li>
+                <li><a href="./layouts/grid">Grid</a></li>
                 <li>PROJECT-3:</li>
                 <li>PROJECT-4:</li>
             </ul>
