--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
                 <li><a href="./layouts/flex/">Flex</a></li>
                 <li>PROJECT-3:</li>
                 <li><a href="./layouts/grid">Grid</a></li>
+                <li><a href="./layouts/project-4-setup/">PROJECT-4: Set up</a></li>
                 <li>PROJECT-4:</li>
             </ul>
         </section>
