--- a/index.html
+++ b/index.html
@@ -64,10 +64,9 @@
                 <li><a href="./CSS-basics/projects/travel-blog/">PROJECT-1: Ella's Travelling Blog</a></li>
                 <li><a href="./CSS-basics/projects/icamp/">PROJECT-2: Coding School Website</a></li>
                 <li><a href="./layouts/flex/">Flex</a></li>
-                <li>PROJECT-3:</li>
                 <li><a href="./layouts/grid">Grid</a></li>
-                <li><a href="./layouts/project-4-setup/">PROJECT-4: Set up</a></li>
-                <li>PROJECT-4:</li>
+                <li><a href="./layouts/project-4-setup/">PROJECT-3: Set up</a></li>
+                <li><a href="./layouts/cooks-hub/">PROJECT-3: Cooks Hub</a></li>
             </ul>
         </section>
 
