--- a/index.html
+++ b/index.html
@@ -120,6 +120,7 @@
                 <li>Modal</li>
                 <li>Tabs</li>
                 <li>Pagination</li>
+                <li>Lazy Load Placeholders</li>
                 <li>Parallax</li>
                 <li>PROJECT-1</li>
                 <li>PROJECT-2</li>
