--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                 <li><a href="./CSS-basics/projects/icamp/">PROJECT-2: Coding School Website</a></li>
                 <li><a href="./layouts/flex/">Flex</a></li>
                 <li><a href="./layouts/grid">Grid</a></li>
-                <li><a href="./layouts/project-4-setup/">PROJECT-3: Set up</a></li>
+                <li><a href="./layouts/project-3-setup/">PROJECT-3: Set up</a></li>
                 <li><a href="./layouts/cooks-hub/">PROJECT-3: Cooks Hub</a></li>
             </ul>
         </section>
@@ -73,7 +73,7 @@
         <h1 class="title">Responsive / Adaptive Layouts</h1>
         <section>
             <ul>
-                <li>Media Queries</li>
+                <li><a href="./responsive/media-queries/">Media Queries</a></li>
                 <li>Responsive Layout</li>
                 <li>Adaptive Layout</li>
                 <li>Mobile First Approach</li>
