--- a/index.html
+++ b/index.html
@@ -74,9 +74,7 @@
         <section>
             <ul>
                 <li><a href="./responsive/media-queries/">Media Queries</a></li>
-                <li>Responsive Layout</li>
-                <li>Adaptive Layout</li>
-                <li>Mobile First Approach</li>
+                <li><a href="./responsive/responsive-layout/">Responsive Layout</a></li>
                 <li>PROJECT-1:</li>
                 <li>PROJECT-2:</li>
             </ul>
