--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@
             <ul>
                 <li><a href="./responsive/media-queries/">Media Queries</a></li>
                 <li><a href="./responsive/responsive-layout/">Responsive Layout</a></li>
+                <li><a href="./responsive/desktop-mobile/">Mobile First VS Desktop First Design</a></li>
                 <li>PROJECT-1:</li>
                 <li>PROJECT-2:</li>
             </ul>
