--- a/index.html
+++ b/index.html
@@ -70,14 +70,20 @@
             </ul>
         </section>
 
-        <h1 class="title">Responsive / Adaptive Layouts</h1>
+        <h1 class="title">Responsive Design</h1>
         <section>
             <ul>
                 <li><a href="./responsive/media-queries/">Media Queries</a></li>
                 <li><a href="./responsive/responsive-layout/">Responsive Layout</a></li>
-                <li><a href="./responsive/desktop-mobile/">Mobile First VS Desktop First Design</a></li>
-                <li>PROJECT-1:</li>
-                <li>PROJECT-2:</li>
+                <li><a href="./responsive/desktop-first/">Desktop First Design</a></li>
+                <li>PROJECT-1: Set up</li>
+                <li>PROJECT-1:Desktop First Design</li>
+                <li><a href="./responsive/mobile-first/">Mobile First Design</a></li>
+                <li>PROJECT-2: Set up</li>
+                <li>PROJECT-2:Mobile First Design</li>
+                <li>PROJECT-3: Set up</li>
+                <li>PROJECT-3:Cooks Hub</li>
+                
             </ul>
         </section>
         <h1 class="title">Advanced CSS</h1>
