--- a/responsive/desktop-first/index.html
+++ b/responsive/desktop-first/index.html
@@ -51,7 +51,17 @@
             <h2>navigation Menus</h2>
             <ul>
                 <li>It is recommended to always keep all UI elements visible and in display</li>
-                <li>But when navigation menus are too large to fit into mobile screens</li>
+                <li>But when navigation menus are too large to fit into mobile screens,
+                        hamburger menus can be applied as an alternative solution. 
+                </li>
+            </ul>
+        </section>
+        <section>
+            <h2>Illustrations</h2>
+            <ul>
+                <li>Icons are informative and used to convey some visual meaning.</li>
+                <li>Unlike icons, some illustrations on desktop view are there for decorative purposes to fillin white space.</li>
+                <li>To make the mobile view less crowded, these illustrations can be illiminated.</li>
             </ul>
         </section>
     </div>
