--- a/responsive/desktop-first/index.html
+++ b/responsive/desktop-first/index.html
@@ -29,7 +29,7 @@
                 <li>Example: </li>
             </ul>
         </section>
-        <h1 class="title">Scale down the UI</h1>
+        <h1 class="title">Scaling down the UI</h1>
         <section>
             <h2>Large-scale Layout (grid-based)</h2>
             <ul>
@@ -60,8 +60,8 @@
             <h2>Illustrations</h2>
             <ul>
                 <li>Icons are informative and used to convey some visual meaning.</li>
-                <li>Unlike icons, some illustrations on desktop view are there for decorative purposes to fillin white space.</li>
-                <li>To make the mobile view less crowded, these illustrations can be illiminated.</li>
+                <li>Unlike icons, some illustrations in the 'desktop view' are there for decorative purposes or to fillin white space.</li>
+                <li>To make the 'mobile view' less crowded, these illustrations can be illiminated.</li>
             </ul>
         </section>
     </div>
