--- a/responsive/project-1/index.html
+++ b/responsive/project-1/index.html
@@ -1,13 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link href="./style/style.css" rel="stylesheet" type="text/css"/>
-    <title>Document</title>
+    <link href="./style/style.css" rel="stylesheet" type="text/css" />
+    <title>Desktop-first design</title>
 </head>
+
 <body>
-    <script src="./app.js"></script>
+    <header>
+        <div class="container">
+            <h1>This is a desktop first design approach</h1>
+        </div>
+    </header>
+    <main>
+        <div class="container">
+            <section id="top">
+                <div class="flex-item col-20">
+                    This flex-item fills 20% of the parent's width
+                </div>
+                <div class="flex-item col-fluid">
+                    This flex-item fills any available speace.
+                </div>
+                <div class="flex-item col-20">
+                        This flex-item fills 20% of the parent's width
+                </div>
+            </section>
+            <section id="bottom">
+                    <div class="flex-item col-fluid">
+                            This flex-item fills any available speace.
+                        </div>
+                        <div class="flex-item col-20">
+                                This flex-item fills 20% of the parent's width
+                        </div>
+            </section>
+        </div>
+    </main>
 </body>
+
 </html>
