--- a/index.html
+++ b/index.html
@@ -77,10 +77,10 @@
                 <li><a href="./responsive/responsive-layout/">Responsive Layout</a></li>
                 <li><a href="./responsive/desktop-first/">Desktop First Design</a></li>
                 <li>PROJECT-1: Set up</li>
-                <li>PROJECT-1:Desktop First Design</li>
+                <li><a href="./responsive/project-1/">PROJECT-1: Desktop First Design</a></li>
                 <li><a href="./responsive/mobile-first/">Mobile First Design</a></li>
                 <li>PROJECT-2: Set up</li>
-                <li>PROJECT-2:Mobile First Design</li>
+                <li>PROJECT-2: Mobile First Design</li>
                 <li>PROJECT-3: Set up</li>
                 <li>PROJECT-3:Cooks Hub</li>
                 
