mobil first layout done

--- a/responsive/project-2/index.html
+++ b/responsive/project-2/index.html
@@ -17,25 +17,16 @@
     </header>
     <main>
         <div class="container">
-            <section id="top">
-                <div class="flex-item col-20">
-                    This flex-item fills 20% of the parent's width
-                </div>
-                <div class="flex-item col-fluid">
-                    This flex-item fills any available speace.
-                </div>
-                <div class="flex-item col-20">
-                        This flex-item fills 20% of the parent's width
-                </div>
-            </section>
-            <section id="bottom">
-                    <div class="flex-item col-fluid">
-                            This flex-item fills any available speace.
-                        </div>
-                        <div class="flex-item col-20">
-                                This flex-item fills 20% of the parent's width
-                        </div>
-            </section>
+            <main id="top">
+                <div class="flex-item">11</div>
+                <div class="flex-item">11</div>
+                <div class="flex-item">11</div>
+                <div class="flex-item">11</div>
+            </main>
+            <aside id="bottom">
+                    <div class="flex-item">222</div>
+                    <div class="flex-item">222</div>
+            </aside>
         </div>
     </main>
 </body>
