cooks  hub responsiveness removed

--- a/index.html
+++ b/index.html
@@ -81,8 +81,8 @@
                 <li><a href="./responsive/mobile-first/">Mobile First Design</a></li>
                 <li>PROJECT-2: Set up</li>
                 <li><a href="./responsive/project-2/">PROJECT-2: Mobile First Design</a></li>
-                <li>PROJECT-3: Set up</li>
-                <li>PROJECT-3:Cooks Hub</li>
+                <li><a href="./responsive/project-3-setup/">PROJECT-3: Set up</a></li>
+                <li><a href="./responsive/cooks-hub/">PROJECT-3: Cooks Hub</a></li>
                 
             </ul>
         </section>
